# catalog-ai

./: .env.example  .env.production.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Caddyfile  Makefile  README.md  compose.override.yml  compose.prod.yml  compose.yml  package.json  plan.md  release-notes-techlab.md
backend/: -w  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  worker.py
backend/app/: initial_data.py  main.py
backend/app/alembic/: env.py
backend/app/api/: deps.py  errors.py  main.py
backend/app/clients/: __init__.py  base.py  brevo.py  claude.py  fashn.py  firecrawl.py  photoroom.py  xano.py
backend/app/core/: config.py  db.py
backend/app/destinations/: base.py  xano_tillin.py
backend/app/enrich/: __init__.py  pipeline.py  title.py  weights.py
backend/app/imaging/: __init__.py  compose.py  naming.py  service.py  staging.py  uploads.py
backend/app/imports/: __init__.py  extract.py  parsers.py  schema.py  selection.py  split.py  tillin_csv.py
backend/app/jobs/: __init__.py  import_runner.py  queue.py  runner.py  worker.py
backend/app/models/: __init__.py  account.py  credit.py  enrichment.py  image_asset.py  import_item.py  import_profile.py  instruction.py  usage.py  usage_price.py  usage_snapshot.py  user.py
backend/app/sources/: __init__.py  firecrawl_source.py  preview.py  resolver.py  shopify_json.py
backend/app/utils/: __init__.py  filters.py
backend/docs/: docstrings.md
backend/scripts/: lint.sh  mypy.sh
backend/tests/: conftest.py  images.py
backend/tests/api/: test_deps_xano.py
backend/tests/clients/: test_external.py  test_fashn.py  test_xano.py
backend/tests/core/: test_config.py
backend/tests/destinations/: test_xano_tillin.py
(+263 files in other folders)
