[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi[standard]>=0.136.3,<1.0.0",
    "pydantic>=2.13.4,<3.0.0",
    "sqlalchemy>=2.0.50,<3.0.0",
    "alembic>=1.18.4,<2.0.0",
    "psycopg[binary]>=3.3.4,<4.0.0",
    "pydantic-settings>=2.14.1,<3.0.0",
    "httpx>=0.28.1,<1.0.0",
    "pyjwt>=2.10,<3.0",
    "bcrypt>=4.2,<5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "mypy>=2.1.0,<3.0.0",
    "ruff>=0.15.16,<1.0.0",
    "prek>=0.4.4,<1.0.0",
    "coverage>=7.14.1,<8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py313"
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
    "T201",   # print statements are not allowed
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.coverage.run]
source = ["app"]
dynamic_context = "test_function"

[tool.coverage.report]
show_missing = true
sort = "-Cover"

[tool.coverage.html]
show_contexts = true
